--- a/Acr.XamForms.UserDialogs.Droid/Acr.XamForms.UserDialogs.Droid.csproj
+++ b/Acr.XamForms.UserDialogs.Droid/Acr.XamForms.UserDialogs.Droid.csproj
@@ -66,7 +66,6 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Droid.cs" />
     <Compile Include="ProgressDialog.cs" />
     <Compile Include="UserDialogService.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
@@ -74,6 +73,7 @@
       <SubType>
       </SubType>
     </Compile>
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\Values\Strings.xml" />
