--- a/nuspec/Acr.XamForms.UserDialogs.nuspec
+++ b/nuspec/Acr.XamForms.UserDialogs.nuspec
@@ -24,6 +24,7 @@
 Create better method structure on main class
 NEW - Date/Time Dialog
 NEW - Duration Dialog
+NEW - secure & multi-line prompts
 
 1.0
 Initial Release
