--- a/Acr.XamForms.Mobile.Droid/Acr.XamForms.Mobile.Droid.csproj
+++ b/Acr.XamForms.Mobile.Droid/Acr.XamForms.Mobile.Droid.csproj
@@ -68,10 +68,10 @@
     </Compile>
     <Compile Include="DeviceInfo.cs" />
     <Compile Include="FileViewer.cs" />
-    <None Include="TODO\AudioService.cs" />
-    <None Include="TODO\ImageService.cs" />
+    <None Include="Media\AudioService.cs" />
+    <None Include="Drawing\ImageService.cs" />
     <Compile Include="Logger.cs" />
-    <None Include="TODO\MailService.cs" />
+    <None Include="Net\Mail\MailService.cs" />
     <Compile Include="Net\NetworkConnectionBroadcastReceiver.cs" />
     <Compile Include="Net\NetworkService.cs" />
     <Compile Include="PhoneService.cs" />
