--- a/nuspec/Acr.XamForms.BarCodeScanner.nuspec
+++ b/nuspec/Acr.XamForms.BarCodeScanner.nuspec
@@ -4,7 +4,7 @@
         <id>Acr.XamForms.BarCodeScanner</id>
         <version>2.0.0</version>
         <title>Barcode Plugin for Xamarin.Forms</title>
-        <description>Barcode scanning for Xamarin Forms built on ZXing.Net.Mobile for Xamarin Forms</description>
+        <description>Barcode scanning and creation for Xamarin.Forms built on ZXing.Net.Mobile</description>
         <authors>Allan Ritchie</authors>
         <owners>Allan Ritchie</owners>
         <licenseUrl>http://opensource.org/licenses/ms-pl.html</licenseUrl>
